--- a/.github/workflows/send-changelog-to-discord.yml
+++ b/.github/workflows/send-changelog-to-discord.yml
@@ -3,7 +3,7 @@ name: Notify Discord on Changelog Update
 on:
   push:
     paths:
-      - 'changelog.md'
+      - 'CHANGELOG.MD'
 
 jobs:
   notify:
@@ -16,6 +16,6 @@ jobs:
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
-          if git diff --name-only HEAD^ HEAD | grep -q 'changelog.md'; then
-            curl -H "Content-Type: application/json" -X POST -d "{\"content\": \"Changelog.md was updated!\"}" $DISCORD_WEBHOOK_URL
+          if git diff --name-only HEAD^ HEAD | grep -q 'CHANGELOG.MD'; then
+            curl -H "Content-Type: application/json" -X POST -d "{\"content\": \"CHANGELOG.MD was updated!\"}" $DISCORD_WEBHOOK_URL
           fi
