--- a/.github/workflows/send-changelog-to-discord.yml
+++ b/.github/workflows/send-changelog-to-discord.yml
@@ -1,21 +1,15 @@
-name: Notify Discord on Changelog Update
+name: Changelog to Discord
 
 on:
-  push:
-    paths:
-      - 'CHANGELOG.MD'
+  release:
+    types: [published]
 
 jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Send update to Discord
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-        run: |
-          if git diff --name-only HEAD^ HEAD | grep -q 'CHANGELOG.MD'; then
-            curl -H "Content-Type: application/json" -X POST -d "{\"content\": \"CHANGELOG.MD was updated!\"}" $DISCORD_WEBHOOK_URL
-          fi
+    - name: Send Changelog to Discord
+      uses: Ilshidur/action-discord@master
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        DISCORD_MESSAGE: "New release: ${{ github.event.release.tag_name }}\n${{ github.event.release.body }}"
