--- a/.github/workflows/send-changelog-to-discord.yml
+++ b/.github/workflows/send-changelog-to-discord.yml
@@ -1,15 +1,38 @@
-name: Changelog to Discord
+name: Notify Discord on Changelog Update
 
 on:
-  release:
-    types: [published]
+  push:
+    paths:
+      - 'CHANGELOG.MD'
 
 jobs:
   notify:
     runs-on: ubuntu-latest
     steps:
-    - name: Send Changelog to Discord
-      uses: Ilshidur/action-discord@master
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        DISCORD_MESSAGE: "New release: ${{ github.event.release.tag_name }}\n${{ github.event.release.body }}"
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Get changed files
+        id: get_changes
+        run: |
+          echo "Changed files:"
+          git diff --name-only HEAD^ HEAD
+          # List changed files and save them in an output
+          CHANGED_FILES=$(git diff --name-only HEAD^ HEAD)
+          echo "CHANGED_FILES=$CHANGED_FILES" >> $GITHUB_ENV
+
+      - name: Check if CHANGELOG.MD was updated
+        id: check_changelog
+        run: |
+          if echo "${{ env.CHANGED_FILES }}" | grep -q 'CHANGELOG.MD'; then
+            echo "CHANGELOG.MD was updated" >> $GITHUB_ENV
+          else
+            echo "CHANGELOG.MD was not updated" >> $GITHUB_ENV
+          fi
+
+      - name: Send update to Discord
+        if: ${{ env.CHANGELOG_MDX_UPDATED == 'CHANGELOG.MD was updated' }}
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        run: |
+          curl -H "Content-Type: application/json" -X POST -d "{\"content\": \"CHANGELOG.MD was updated!\"}" $DISCORD_WEBHOOK
