--- a/.github/workflows/send-changelog-to-discord.yml
+++ b/.github/workflows/send-changelog-to-discord.yml
@@ -39,16 +39,23 @@ jobs:
             echo "CHANGELOG_MD_UPDATED=false" >> $GITHUB_ENV
           fi
 
+      - name: Extract latest update from CHANGELOG.md
+        if: ${{ env.CHANGELOG_MD_UPDATED == 'true' }}
+        id: extract_update
+        run: |
+          # Extract the latest update section from CHANGELOG.md
+          awk '/^## \[/{i++}i==1' CHANGELOG.md > latest_update.txt
+          # Read the extracted content into a variable
+          LATEST_UPDATE=$(cat latest_update.txt)
+          # Ensure we don't exceed Discord's message length limit
+          echo "LATEST_UPDATE=$(echo "$LATEST_UPDATE" | head -c 2000)" >> $GITHUB_ENV
+
       - name: Send update to Discord
         if: ${{ env.CHANGELOG_MD_UPDATED == 'true' }}
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: |
-          # Read the content of CHANGELOG.md
-          CHANGES_CONTENT=$(cat CHANGELOG.md)
-          
-          # Create a JSON payload with the content
-          PAYLOAD=$(jq -n --arg content "CHANGELOG.md was updated!\n\n\`\`\`\n$CHANGES_CONTENT\n\`\`\`" '{content: $content}')
-
+          # Create a JSON payload with the extracted update
+          PAYLOAD=$(jq -n --arg content "$LATEST_UPDATE" '{content: $content}')
           # Send the payload to Discord
           curl -H "Content-Type: application/json" -X POST -d "$PAYLOAD" $DISCORD_WEBHOOK
